--- a/app/views/reports/dashboard.html.haml
+++ b/app/views/reports/dashboard.html.haml
@@ -41,13 +41,13 @@
       });
       
       // Render the article counts asynchronously
-      $("#articles").paginated_table("#{writer_articles_url(@user[:key], @user[:id])}");
+      $("#articles").paginated_table("#{writer_articles_url(@user[:key], @user[:id])}", 10);
       
       // Render the domain counts asynchronously
-      $("#domains").paginated_table("#{writer_domains_url(@user[:key], @user[:id])}");
+      $("#domains").paginated_table("#{writer_domains_url(@user[:key], @user[:id])}", 10);
       
       // Render the keyphrase counts asynchronously
-      $("#keyphrases").paginated_table("#{writer_keyphrases_url(@user[:key], @user[:id])}");
+      $("#keyphrases").paginated_table("#{writer_keyphrases_url(@user[:key], @user[:id])}", 10);
       
       var dates = $( "#start_date, #end_date" ).datepicker({
         numberOfMonths: 1,
