Truncate title to 60 characters.

--- a/app/views/articles/_articles.html.haml
+++ b/app/views/articles/_articles.html.haml
@@ -1,6 +1,6 @@
 - article_counts.each do |ac|
   - if ac.count != 0
     %tr
-      %td= ac.title
+      %td= truncate(ac.title, 60, '...')
       %td== #{link_to "Details", article_dashboard_url(@user[:key], ac.article_id)} / #{link_to "View", ac.permalink}
       %td= ac.count
