Add i18n for english.

--- a/app/views/reports/_articles_table.haml
+++ b/app/views/reports/_articles_table.haml
@@ -1,9 +1,9 @@
 %table  
   %thead
     %tr
-      %th.first_short Article
+      %th.first_short= I18n.t 'report.article'
       %th.second_short
-      %th Views
+      %th= I18n.t 'report.views'
   %tbody
 .loading
   = render 'loading_indicator'
