--- a/app/views/reports/_domains_table.html.haml
+++ b/app/views/reports/_domains_table.html.haml
@@ -1,8 +1,8 @@
 %table
   %thead
     %tr
-      %th.first Domains
-      %th Views
+      %th.first= I18n.t('report.domains')
+      %th= I18n.t('report.views')
   %tbody
 .loading
   = render 'loading_indicator'
