--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,8 @@
 <body>
 
   <div class="header" align="center">  
-      <a href="http://my.suite101.com"><img src="http://graphics.suite101.com/stats_logo.png"></a>
-      <a id="mysuite" href="http://my.suite101.com">Back to MySuite</a>
+      <img src="http://graphics.suite101.com/stats_logo.png">
+      <a id="mysuite" href="http://my.suite101.com"><%= I18n.t 'report.mysuite_link'%></a>
   </div>
   <div class="content">
     <%= yield %>
