--- a/app/views/reports/article_dashboard.html.haml
+++ b/app/views/reports/article_dashboard.html.haml
@@ -1,32 +1,29 @@
 %p.utility_bar
-  = link_to "View All Articles", dashboard_path(@user[:key])
-%h1== Stats for &quot;#{CGI.unescape(@article.title)}&quot;
+  = link_to I18n.t('report.view_all_articles'), dashboard_path(@user[:key])
+%h1= I18n.t('report.stats_for_article').gsub('[title]', display_article_title(@article.title))
 
 %date
   =form_tag article_dashboard_path(@user[:key], @article.id), :method => :get do
-    == from #{text_field_tag(:start_date, I18n.l(@start_date), {:id => "start_date"})}
-    == to #{text_field_tag(:end_date, I18n.l(@end_date), {:id => "end_date"})}
-    = submit_tag "Update"
+    == #{I18n.t('report.from')} #{text_field_tag(:start_date, I18n.l(@start_date), {:id => "start_date"})}
+    == #{I18n.t('report.to')} #{text_field_tag(:end_date, I18n.l(@end_date), {:id => "end_date"})}
+    = submit_tag I18n.t('report.update')
 %br
 %hr
 
-%h2== People Viewing This Article
+%h2= I18n.t('report.people_viewing_article')
 #page_view_plot
 
-%h2.summary
-  This article was viewed
-  %span#total_views ...
-  times.
+%h2.summary=raw I18n.t('report.this_article_viewed_times').gsub('[times]',"<span id='total_views'>...</span>")
 
 #sources_loading
   = render 'loading_indicator'
 #source_chart
 
-%h2 How Are People Finding &quot;#{CGI.unescape(@article.title)}&quot;?
+%h2= I18n.t('report.how_people_finding_article').gsub('[title]', display_article_title(@article.title))
 #keyphrases
   = render 'keyphrases_table'
 
-%h2 Where Are People Coming From?
+%h2= I18n.t('report.where_people_from')
 #domains
   = render 'domains_table'
 
