Clean up translations.

--- a/app/views/reports/_keyphrases_table.html.haml
+++ b/app/views/reports/_keyphrases_table.html.haml
@@ -1,8 +1,8 @@
 %table
   %thead
     %tr
-      %th.first Keyphrases
-      %th Views
+      %th.first= t('report.keyphrases')
+      %th= t('report.views')
   %tbody
 .loading
   = render 'loading_indicator'
