--- a/app/views/reports/article_dashboard.html.haml
+++ b/app/views/reports/article_dashboard.html.haml
@@ -1,29 +1,29 @@
 %p.utility_bar
-  = link_to I18n.t('report.view_all_articles'), dashboard_path(@user[:key])
-%h1= I18n.t 'report.stats_for_article', :title => display_article_title(@article.title)
+  = link_to t('report.view_all_articles'), dashboard_path(@user[:key])
+%h1= t('report.stats_for_article', :title => display_article_title(@article.title))
 
 %date
   =form_tag article_dashboard_path(@user[:key], @article.id), :method => :get do
-    == #{I18n.t('report.from')} #{text_field_tag(:start_date, I18n.l(@start_date), {:id => "start_date"})}
-    == #{I18n.t('report.to')} #{text_field_tag(:end_date, I18n.l(@end_date), {:id => "end_date"})}
-    = submit_tag I18n.t('report.update')
+    == #{t('report.from')} #{text_field_tag(:start_date, I18n.l(@start_date), {:id => "start_date"})}
+    == #{t('report.to')} #{text_field_tag(:end_date, I18n.l(@end_date), {:id => "end_date"})}
+    = submit_tag t('report.update')
 %br
 %hr
 
-%h2= I18n.t('report.people_viewing_article')
+%h2= t('report.people_viewing_article')
 #page_view_plot
 
-%h2.summary=raw I18n.t 'report.this_article_viewed_times', :times => "<span id='total_views'>...</span>"
+%h2.summary=raw t 'report.this_article_viewed_times', :times => "<span id='total_views'>...</span>"
 
 #sources_loading
   = render 'loading_indicator'
 #source_chart
 
-%h2= I18n.t 'report.how_people_finding_article', :title => display_article_title(@article.title)
+%h2= t 'report.how_people_finding_article', :title => display_article_title(@article.title)
 #keyphrases
   = render 'keyphrases_table'
 
-%h2= I18n.t('report.where_people_from')
+%h2= t('report.where_people_from')
 #domains
   = render 'domains_table'
 
