--- a/app/views/reports/_articles_votes.html.haml
+++ b/app/views/reports/_articles_votes.html.haml
@@ -1,11 +1,11 @@
-%h2= t 'report.which_articles_people_are_reading'
-#articles
+%h2= t 'report.which_useful_articles'
+#article_votes
   %table  
     %thead
       %tr
         %th.first_short= I18n.t 'report.article'
         %th.second_short
-        %th= I18n.t 'report.views'
+        %th= I18n.t 'report.helpful'
     %tbody
   .loading
     = render 'loading_indicator'
