--- a/app/views/article_votes/index.html.haml
+++ b/app/views/article_votes/index.html.haml
@@ -2,4 +2,4 @@
   %tr
     %td= display_article_title(title)
     %td== #{link_to I18n.t('report.details'), article_dashboard_url(@user[:key], id)} / #{link_to I18n.t('report.views'), permalink}
-    %td= "+#{up_vote} / -#{down_vote}"
+    %td= display_votes(up_vote, down_vote)
