--- a/app/views/article_votes/new.html.haml
+++ b/app/views/article_votes/new.html.haml
@@ -1,17 +1,30 @@
 =# http://localhost:3000/new_article_votes/3CEa?article_id=363725
 %h2 Is this article helpful?
-= form_tag article_votes_url(:article_id => @article.id) do
-  = radio_button_tag('article_vote[vote]', "true")
-  = label_tag(:up_vote, "Yes")
+- if @article
+  = form_tag article_votes_url(:article_id => @article.id) do
+    = radio_button_tag('article_vote[vote]', "true")
+    = label_tag(:up_vote, "Yes")
+    %br
+    = radio_button_tag('article_vote[vote]', "false")
+    = label_tag(:up_vote, "No (why not?)")
+    %br
+    #note_field{:style => 'display:none'}
+      = text_area_tag 'article_vote[note]'
+    = hidden_field_tag 'article_vote[title]', @article.title
+    = hidden_field_tag 'article_vote[writer_id]', @article.writer_id
+    = submit_tag "Vote"
+  %hr
   %br
-  = radio_button_tag('article_vote[vote]', "false")
-  = label_tag(:up_vote, "No (why not?)")
+  %label Writer id:
+  = link_to 'Writer stats', "/test/#{@article.writer_id}"
   %br
-  #note_field{:style => 'display:none'}
-    = text_area_tag 'article_vote[note]'
-  = hidden_field_tag 'article_vote[title]', @article.title
-  = hidden_field_tag 'article_vote[writer_id]', @article.writer_id
-  = submit_tag "Vote"
+  %hr
+%br
+%label Article for writer_id 587633
+%br
+- @articles.each do |article|
+  = link_to_unless_current CGI::unescape(article.title), new_article_vote_path(:article_id => article.id)
+  %br
 
 = javascript_include_tag 'https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js'
   
