--- a/app/views/reports/_articles_table.haml
+++ b/app/views/reports/_articles_table.haml
@@ -1,13 +1,14 @@
-%h2= t 'report.which_articles_people_are_reading'
-#articles
-  %table  
-    %thead
-      %tr
-        %th.first_short= I18n.t 'report.article'
-        %th.second_short
-        %th= I18n.t 'report.views'
-    %tbody
-  .loading
-    = render 'loading_indicator'
-  .more
-    = render 'more'
+%div
+  %h2= t 'report.which_articles_people_are_reading'
+  #articles
+    %table  
+      %thead
+        %tr
+          %th.first_short= I18n.t 'report.article'
+          %th.second_short
+          %th= I18n.t 'report.views'
+      %tbody
+    .loading
+      = render 'loading_indicator'
+    .more
+      = render 'more'
