Refactoring and fixing the article dashboard page.

--- a/app/views/reports/_votes_notes_table.html.haml
+++ b/app/views/reports/_votes_notes_table.html.haml
@@ -1,6 +1,7 @@
-%h2= t 'report.vote_responses', :title => display_article_title(@article.title)
-%table
-  %thead
-    %tr
-      %th.first= t('report.responses')
-  %tbody#vote_notes
+%div
+  %h2= t 'report.vote_responses', :title => display_article_title(@article.title)
+  %table
+    %thead
+      %tr
+        %th.first= t('report.responses')
+    %tbody#vote_notes
