--- a/app/views/reports/_articles_votes.html.haml
+++ b/app/views/reports/_articles_votes.html.haml
@@ -4,8 +4,7 @@
     %table  
       %thead
         %tr
-          %th.first_short= I18n.t 'report.article'
-          %th.second_short
+          %th.first= I18n.t 'report.article'
           %th= I18n.t 'report.helpful'
       %tbody
     .loading
