--- a/app/views/reports/dashboard.html.haml
+++ b/app/views/reports/dashboard.html.haml
@@ -22,12 +22,12 @@
 #source_chart
 
 = render 'articles_table'
-
-= render 'articles_votes'
   
 = render 'keyphrases_table', :title => t('report.how_people_finding_me') 
 
 = render 'domains_table', :title => t('report.where_readers_from') 
+
+= render 'articles_votes'
 
 - content_for :page_javascript do
   :javascript
@@ -53,7 +53,7 @@
       $("#articles").paginated_table("#{writer_articles_url(@user[:key], @user[:id])}", 10);
       
       // Render article votes counts
-      $("#article_votes").paginated_table("#{article_votes_path(:key => @user[:key], :writer_id => @user[:id])}", 10);
+      $("#article_votes").paginated_table("#{writer_votes_url(@user[:key], @user[:id])}", 10);
       
       // Render the domain counts
       $("#domains").paginated_table("#{writer_domains_url(@user[:key], @user[:id])}", 10);
