--- a/app/views/mysuite_integration/twelve_week_page_view_graph.html.haml
+++ b/app/views/mysuite_integration/twelve_week_page_view_graph.html.haml
@@ -17,6 +17,9 @@
         marginLeft: 30,
         marginRight: #{right_margin}
       },
+      credits: {
+        enabled: false
+      },
       title: false,
       legend: {
         enabled: false
