FIXBUG: Mysuite now goes to the right domain. Fix a translation for de.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <div class="header" align="center">  
       <img src="http://graphics.suite101.com/stats_logo.png">
-      <a id="mysuite" href="http://my.suite101.com"><%= I18n.t 'report.mysuite_link'%></a>
+      <a id="mysuite" href="http://my.<%= request.domain %>"><%= I18n.t 'report.mysuite_link'%></a>
   </div>
   <div class="content">
     <%= yield %>
