--- a/app/views/mysuite_integration/monthly_page_view_graph.html.haml
+++ b/app/views/mysuite_integration/monthly_page_view_graph.html.haml
@@ -1,11 +1,14 @@
-= javascript_include_tag 'jquery', 'highcharts'
+= javascript_include_tag 'jquery', 'highcharts', 'application.js'
 
 - plot_height = params[:size]=='small' ? 175 : 500
 - legend_enabled = params[:size]=='small' ? false : true
 - xlabel = params[:size]=='small' ? "" : "%e"
+- left_margin = params[:size]=='small' ? 0 : 40
 
 :javascript
   $(function(){
+    
+    localize_highcharts("#{I18n.locale}");
     
     // Make the 'page_view_plot' div a highchart showing the total view counts.
     var chart;
@@ -14,8 +17,8 @@
         renderTo: 'page_view_plot',
         defaultSeriesType: 'column',
         height: "#{plot_height}",
-        marginLeft: 40,
-        marginRight: 10
+        marginLeft: #{left_margin},
+        marginRight: 0
       },
       credits: {
         enabled: false
